# Team_project_01

./: .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  README.txt  TODO.md  classes.py  fields.py  folder_sort.py  main.py  notes.py  pyproject.toml  pyproject.toml.poetry  requirements.txt  setup.cfg  setup.cfg.setuptools  setup.py  setup.py.bak
Team_project_01/: class_input.py  class_input_output.py  class_output.py  classes.py  constants.py  fields.py  functions_address.py  functions_birthday.py  functions_common.py  functions_email.py  functions_notes.py  functions_phone.py  main.py  notes.py  readme.py  setup.py
Team_project_01/Team_project_01/: fields.py  folder_sort.py
team-project-01/: class_input_output.py  classes.py  constants.py  fields.py  folder_sort.py  main.py  notes.py
