[tool.poetry]
name = "team-project-01"
version = "0.6.5"
description = "CLI Assistant"
authors = ["piavik <piavik@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "team-project-01" },
]

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0"

[tool.poetry.scripts]
Informator = "Team_project_01.main:main"
botik = "Team_project_01.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
